<resources>
    <string name="app_name">CrediAgenda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CrediAgenda</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_travel">Control de Viaticos</string>
    <string name="menu_ride">Transporte</string>
    <string name="menu_alliance">Promociones con Carnet</string>
    <string name="menu_rooms">Rooms</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Ride</string>
    <string name="title_travel">Control de viaticos</string>
    <string name="menu_rideV2">Reservacion de Salas</string>
    <string name="menu_roomsV2">Reservacion de Salas</string>
    <string name="required_email_password">Usuario y contraseña son obligatorios</string>
    <string name="login_login_issues"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="login_button_send">Entrar</string>
    <string name="login_hint_et_email">Correo electrónico</string>
    <string name="login_hint_et_password">Contraseña</string>
    <string name="wrong_email_password">El usuario o contraseña es incorrecto</string>
    <string name="add_photo">Agregar Foto</string>
    <string name="add_photo_carnet">Agregar Fotografia*</string>
    <string name="agregar_registro">Agregar registro</string>
    <string name="et_description_hint">Campo Obligatorio con la categoria "Otros"</string>
    <string name="empecemos">Nuevo Viaje</string>
    <string name="initial">Inicia un nuevo viaje ingresando la informacion que te solicitamos en el siguiente formulario</string>
    <string name="countrys">¿En donde te encuentras y hacia donde te diriges?</string>
    <string name="travel_days">Acordemos la duración de tu viaje.</string>
    <string name="cost_center">Centro de coste:</string>
    <string name="cod_project" translatable="false">(O código de proyecto)</string>
    <string name="cash_description">De esta manera te mantendremos al tanto de tu limite de consumo o puedes dejarlo vacío y nosotros te mostraremos un total de gastos.</string>
    <string name="refound">Reintegro:</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="initial_date">Inicio</string>
    <string name="final_date">Finalización</string>
    <string name="approved_by">Aprobado por:</string>
    <string name="limit_cash">¿Quieres establecer un limite para el uso del efectivo?</string>
    <string name="title_date_range_picker_example" translatable="false">Date Range Picker</string>
    <string name="origin_country_EditText">Lugar de salida</string>
    <string name="destiny_country_EditText">Lugar de destino</string>
    <string name="cost" translatable="false">0.00</string>
    <string name="motive">Motivo por el cual viaja</string>
    <string name="date">Agregar</string>
    <string name="finish_date">Fecha final</string>
    <string name="update_travel">Actualizar</string>
    <string name="initial_travel">INICIAR VIAJE</string>
    <string name="login_logo_etracker_app">Logo Unicomer</string>
    <string name="txt_loading">Cargando…</string>
    <string name="logo_garagework">Logo Garageworks</string>
    <string name="txt_record_name">La pampa Argentina</string>
    <string name="txt_record_date">10/08/2019</string>
    <string name="txt_record_price" translatable="false">$45</string>
    <string name="category_image" translatable="false">category image</string>
    <string name="hello_blank_fragment">New Fragment</string>
    <string name="txt_dialog_login">Escribe tu correo para enviarte el formulario de reinicio de contraseña.</string>
    <string name="txt_dialog_login_header">¿Olvidaste tu contraseña?</string>
    <string name="error_hint">Todos los campos son obligatorio</string>
    <string name="error_center_cost">El centro de coste deben ser de 4 digitos</string>
    <string name="a">a</string>
    <string name="tv_titulo">Titulo: </string>
    <string name="nombre_de_registro">Nombre de Registro</string>
    <string name="tv_fecha">Fecha:</string>
    <string name="tv_monto">Monto:</string>
    <string name="tv_categoria">Categoria:</string>
    <string name="tv_descripcion">Descripción:</string>
    <string name="register_complete">Registro completado</string>
    <string name="User_cancel_datapicker">Se canceló el calendario</string>
    <string name="register_update">Registro actualizado</string>
    <string-array name="departures_array">
        <item>San Salvador</item>
        <item>Oficina Central</item>
    </string-array>
    <string-array name="destinations_array">
        <item>Santa Ana</item>
        <item>San Miguel</item>
        <item>Sonsonate</item>
        <item>Zacatecoluca</item>
        <item>Usulutan</item>
        <item>Lourdes</item>
        <item>Santa Tecla</item>
        <item>Apopa</item>
        <item>Plaza Mundo</item>
    </string-array>
    <string name="reservar_btn">Reservar</string>
    <string name="txt_view_next_round">Proximo viaje</string>
    <string name="txt_view_slots_available">Cupos Disponibles: </string>
    <string name="txt_view_reservation_count">11</string>
    <string name="txt_view_schedule">3:30</string>
    <string name="menu_settings">Configuraciones</string>
    <string name="text_logout">Cerrar sesión</string>
    <string name="colaborador">Colaborador</string>
    <string name="departamento">Departamento</string>
    <string name="codigo">Código</string>
    <string name="carnetVirtual">Mi Carnet Virtual</string>
    <string name="modificacion">Modificar Datos</string>
    <string name="settinngsApp">Configuraciones de la app</string>
    <string name="comingSoon">PROXIMAMENTE</string>
    <string name="perfil">Reconocimientos y logros</string>
    <string name="term_string">6 meses</string>
    <string name="amount_string">Digita el monto ( minimo $500 )</string>
    <string name="term_string_2">Selecciona el plazo</string>
    <string name="text_bak">Atras</string>
    <string name="text_next">Siguiente</string>
    <string name="term_string_three">Cuota mensual deseada</string>
    <string name="credito">Credito</string>
</resources>