<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_top">
        <item
            android:id="@+id/nav_alliance"
            android:icon="@drawable/ic_alliance_final"
            android:title="@string/menu_alliance" />
        <item
            android:id="@+id/nav_ride"
            android:icon="@drawable/ic_ride_final"
            android:title="@string/menu_ride"
            android:visible="false"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_etracker_logo"
            android:title="@string/menu_travel"
            android:visible="false"/>


        <item
            android:id="@+id/nav_rooms2"
            android:icon="@drawable/ic_room_final"
            android:title="@string/menu_roomsV2"
            android:visible="true"
            />

        <item
            android:id="@+id/rideSlidingFragment"
            android:icon="@drawable/ic_ride_final"
            android:title="@string/menu_rideV2"
            android:visible="false"/>

        <item
            android:id="@+id/profileFragment2"
            android:title="@string/perfil"
            android:icon="@drawable/ic_baseline_account_circle_24"/>
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" >
        </item>
    </group>


</menu>
