<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:background="#F4F4F4"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.information.CalculatorFragment">

        <LinearLayout
            android:id="@+id/credit_request_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:elevation="8dp"
                    android:padding="30dp"
                    android:background="@drawable/btn_background_white"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_marginBottom="40dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_calculator_section"
                            android:layout_width="70dp"
                            android:layout_height="70dp"/>

                        <TextView
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/helvetica_neue_medium"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/credito"/>

                    </LinearLayout>

                    <TextView
                        style="@style/inputTagsStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount_string"/>

                    <EditText
                        android:id="@+id/credit_amount_box"
                        style="@style/inputTextStyle"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_marginBottom="30dp"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        style="@style/inputTagsStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/term_string_2"/>

                    <Spinner
                        android:id="@+id/credit_term_spinner"
                        android:layout_marginBottom="40dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:visibility="gone"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:fontFamily="@font/helvetica_neue_regular"
                        android:text="@string/term_string"
                        android:id="@+id/credit_time_box"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <SeekBar
                        android:visibility="gone"
                        android:layout_marginBottom="40dp"
                        android:id="@+id/credit_term"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        style="@style/inputTagsStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/term_string_three"/>

                    <EditText
                        android:id="@+id/monthly_payment_box"
                        style="@style/inputTextStyle"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_marginBottom="30dp"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/text_bak"
                android:inputType="text"
                android:letterSpacing="0.02"
                android:background="@drawable/btn_background_white"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextViewEdits" />

            <Button
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:inputType="text"
                android:letterSpacing="0.02"
                android:background="@drawable/btn_background_blue"
                android:id="@+id/confirm_button"
                android:textColor="@color/white"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/helvetica_neue_bold"
                android:text="@string/text_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextViewEdits" />

        </LinearLayout>

    </FrameLayout>
</layout>